用户登录窗口和主窗口的切换

--- a/10-3/src/fend/uilogin/logindialog.ui
+++ b/10-3/src/fend/uilogin/logindialog.ui
@@ -207,7 +207,7 @@
          </font>
         </property>
         <property name="text">
-         <string>&amp;备注</string>
+         <string>备注</string>
         </property>
        </widget>
       </item>
