--- a/10-3/src/fend/uimain/toolbarwidget.ui
+++ b/10-3/src/fend/uimain/toolbarwidget.ui
@@ -45,7 +45,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_2">
+      <widget class="QPushButton" name="btnUpload">
        <property name="maximumSize">
         <size>
          <width>50</width>
@@ -58,7 +58,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_3">
+      <widget class="QPushButton" name="btnDownload">
        <property name="maximumSize">
         <size>
          <width>50</width>
