--- a/11-5/src/fend/uilogin/logindialog.ui
+++ b/11-5/src/fend/uilogin/logindialog.ui
@@ -176,7 +176,7 @@
        </widget>
       </item>
       <item>
-       <widget class="QLineEdit" name="lineSecretKey">
+       <widget class="MyLineEdit" name="lineSecretKey">
         <property name="minimumSize">
          <size>
           <width>0</width>
@@ -291,6 +291,13 @@
    </item>
   </layout>
  </widget>
+ <customwidgets>
+  <customwidget>
+   <class>MyLineEdit</class>
+   <extends>QLineEdit</extends>
+   <header>src/fend/uicommon/mylineedit.h</header>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
