--- a/12-5/src/fend/uilogin/logindialog.ui
+++ b/12-5/src/fend/uilogin/logindialog.ui
@@ -44,7 +44,7 @@
          </size>
         </property>
         <property name="text">
-         <string>Logo</string>
+         <string/>
         </property>
        </widget>
       </item>
