--- a/14-5/src/fend/uimain/toolbarwidget.ui
+++ b/14-5/src/fend/uimain/toolbarwidget.ui
@@ -71,7 +71,7 @@
       </widget>
      </item>
      <item>
-      <widget class="QPushButton" name="pushButton_4">
+      <widget class="QPushButton" name="btnRefresh">
        <property name="maximumSize">
         <size>
          <width>50</width>
