--- a/15-3/resource.qrc
+++ b/15-3/resource.qrc
@@ -4,5 +4,6 @@
         <file>static/qss/default.qss</file>
         <file>static/test/buckets1.json</file>
         <file>static/test/buckets2.json</file>
+        <file>static/sql/login_info.sql</file>
     </qresource>
 </RCC>
