--- a/15-3/src/fend/uilogin/logindialog.ui
+++ b/15-3/src/fend/uilogin/logindialog.ui
@@ -101,14 +101,50 @@
       <enum>QFrame::Raised</enum>
      </property>
      <layout class="QVBoxLayout" name="verticalLayout">
-      <property name="leftMargin">
-       <number>40</number>
-      </property>
-      <property name="rightMargin">
-       <number>40</number>
-      </property>
       <item>
        <spacer name="verticalSpacer">
+        <property name="orientation">
+         <enum>Qt::Vertical</enum>
+        </property>
+        <property name="sizeHint" stdset="0">
+         <size>
+          <width>20</width>
+          <height>40</height>
+         </size>
+        </property>
+       </spacer>
+      </item>
+      <item>
+       <widget class="QLabel" name="labelLgoinName">
+        <property name="font">
+         <font>
+          <family>微软雅黑</family>
+          <pointsize>12</pointsize>
+         </font>
+        </property>
+        <property name="text">
+         <string>登录名</string>
+        </property>
+        <property name="buddy">
+         <cstring>lineSecretId</cstring>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <widget class="QLineEdit" name="lineLoginName">
+        <property name="minimumSize">
+         <size>
+          <width>0</width>
+          <height>32</height>
+         </size>
+        </property>
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
+      </item>
+      <item>
+       <spacer name="verticalSpacer_7">
         <property name="orientation">
          <enum>Qt::Vertical</enum>
         </property>
@@ -235,7 +271,7 @@
        </spacer>
       </item>
       <item>
-       <widget class="QCheckBox" name="checSaveSession">
+       <widget class="QCheckBox" name="checkSaveSession">
         <property name="text">
          <string>记住会话</string>
         </property>
