--- a/19-5/cosbrowser/resource.qrc
+++ b/19-5/cosbrowser/resource.qrc
@@ -2,8 +2,9 @@
     <qresource prefix="/">
         <file>static/imgs/logo.png</file>
         <file>static/qss/default.qss</file>
-        <file>static/test/buckets1.json</file>
-        <file>static/test/buckets2.json</file>
         <file>static/sql/login_info.sql</file>
+        <file>static/versions/config_default.json</file>
+        <file>static/test/business.json</file>
+        <file>static/test/custom.json</file>
     </qresource>
 </RCC>
