--- a/cos/cosbrowser/resource.qrc
+++ b/cos/cosbrowser/resource.qrc
@@ -7,5 +7,24 @@
         <file>static/test/business.json</file>
         <file>static/test/custom.json</file>
         <file>static/docs/errorcode.csv</file>
+        <file>static/imgs/Close-1.png</file>
+        <file>static/imgs/Close-2.png</file>
+        <file>static/imgs/Delete-1.png</file>
+        <file>static/imgs/Delete-2.png</file>
+        <file>static/imgs/Maximize-1.png</file>
+        <file>static/imgs/Maximize-2.png</file>
+        <file>static/imgs/Maximize-3.png</file>
+        <file>static/imgs/Maximize-4.png</file>
+        <file>static/imgs/Minimize-1.png</file>
+        <file>static/imgs/Minimize-2.png</file>
+        <file>static/imgs/qtlogo.png</file>
+        <file>static/imgs/Quit-1.png</file>
+        <file>static/imgs/Quit-2.png</file>
+        <file>static/imgs/right.png</file>
+        <file>static/imgs/Search.png</file>
+        <file>static/imgs/Trans-1.png</file>
+        <file>static/imgs/Trans-2.png</file>
+        <file>static/imgs/上传.png</file>
+        <file>static/imgs/下载.png</file>
     </qresource>
 </RCC>
