--- a/cos/cosbrowser/src/fend/uicommon/breadwidget.ui
+++ b/cos/cosbrowser/src/fend/uicommon/breadwidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>400</width>
-    <height>54</height>
+    <height>73</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -27,24 +27,14 @@
     <number>0</number>
    </property>
    <item>
-    <widget class="QPushButton" name="pushButton">
-     <property name="text">
-      <string>存储桶</string>
+    <widget class="QListView" name="listView">
+     <property name="editTriggers">
+      <set>QAbstractItemView::NoEditTriggers</set>
+     </property>
+     <property name="flow">
+      <enum>QListView::LeftToRight</enum>
      </property>
     </widget>
-   </item>
-   <item>
-    <spacer name="horizontalSpacer">
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>40</width>
-       <height>20</height>
-      </size>
-     </property>
-    </spacer>
    </item>
   </layout>
  </widget>
