--- a/cos/cosbrowser/src/fend/uitransfer/upload.ui
+++ b/cos/cosbrowser/src/fend/uitransfer/upload.ui
@@ -27,7 +27,14 @@
     <number>0</number>
    </property>
    <item>
-    <widget class="QTableWidget" name="tableWidget"/>
+    <widget class="QTableWidget" name="tableWidget">
+     <property name="selectionBehavior">
+      <enum>QAbstractItemView::SelectRows</enum>
+     </property>
+     <property name="showGrid">
+      <bool>false</bool>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
